aligned sections apropriately Added background color to active element Corrected various problems on HTML

--- a/main.css
+++ b/main.css
@@ -1,42 +1,58 @@
 html, body, nav, section, footer, div{
 	margin:0;
+	/*font-size: 20px;*/
 }
-nav{
-
+body{
+	background:#f9f9f9;
+}
+h5,h4,h6,h3,h2,h1,a,p{
+	font-size: 17px;
+}
+#navigation {
+	margin-top: 30px;
+	margin-bottom: 20px;
 }
 #navigation ul {
 	list-style-type: none; 
 }
+
 #navigation li{
-	border-top:1px solid #000;
-	border-left: 1px solid #000;
-	border-right: 1px solid #000;
-	padding: 10px;
+	border-top: 1px solid #000;
+	/*margin:10px;*/
+	padding:20px 10px;
+	background:#f0f0f0;
+	/*#cf7ef3;*/
+	/*#f3957e;*/
 }
 #navigation li:last-child {
 	border-bottom: 1px solid #000;
 }
 
-.left-section{
-	/*width: 50%;*/
+/*.left-section{
+	width: 50%;
 /*	height:500px;*/
-}
-#navigation{
-	width: 50%;	
-}
+/*}*/
+
 
 
 /***************Creating collumns**********************/
 .rows {
 width:100%;
 }
-.collumn2 {
-	width:50%;
+#navigation{
+	width: 25%;
 	float:left;
+	position: fixed;
+	top:0;
+	left:0;
+}
+.collumn2 {
+	width:75%;
+	float:right;
 }
 .container {
 	width:90%;
-	/*padding:20px;*/
+	padding:20px;
 	margin:0 auto;
 }
 .rows:after {
